Update demo-gradle-scala benchmark